Added links, images, and second page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
 <body>
 
     <h1>Chicken</h1>
-    <p>>The chicken (Gallus gallus domesticus) is a domesticated junglefowl species, with attributes of wild species
+
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fc/%E0%B0%95%E0%B1%8B%E0%B0%A1%E0%B0%BF_%E0%B0%AA%E0%B0%BF%E0%B0%B2%E0%B1%8D%E0%B0%B2IMG20191207080730-01.jpg/298px-%E0%B0%95%E0%B1%8B%E0%B0%A1%E0%B0%BF_%E0%B0%AA%E0%B0%BF%E0%B0%B2%E0%B1%8D%E0%B0%B2IMG20191207080730-01.jpg"
+        alt="baby chicken">
+
+    <a href="about.html">About Page</a>
+
+    <p>
+        The chicken (Gallus gallus domesticus) is a domesticated junglefowl species, with attributes of wild species
         such as the grey and the Ceylon junglefowl[1] that are originally from Southeast Asia.
         Rooster and cock are terms for adult male birds, and a younger male may be called a cockerel. A male that has
         been castrated is a capon. An adult female bird is called a hen, and a sexually immature female is called a
@@ -45,9 +52,22 @@
         explicabo neque corporis. Voluptas aperiam est ipsum pariatur voluptatibus enim dolore illum itaque? Architecto,
         ipsam.
     </p>
-    <h3>history</h3>
-    <h4>i am h4</h4>
-    <h4>I also am</h4>
+    <h2>Breeds of chicken</h2>
+    <ul>
+        <li>Bantam
+            <ol>
+                <li>Silkie</li>
+                <li>Polish</li>
+            </ol>
+        </li>
+        <li>Standard
+            <ul>
+                <li>Rhode Island</li>
+                <li>Easter Egger</li>
+            </ul>
+        </li>
+
+    </ul>
 
 
 </body>
